--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "firebase": "^9.23.0",
+    "swiper": "^8.0.0",
+    "aos": "^2.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
@@ -36,6 +38,7 @@
     "@angular/cli": "~16.1.5",
     "@angular/compiler-cli": "^16.1.6",
     "@types/jasmine": "~4.3.0",
+    "@types/aos": "^3.0.5",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
